--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@main
         with:
           # 指定一个子目录放ci仓库，避免与源仓库混淆
-          path: android-ci-source
+          path: ci-source
 
       # 并行克隆两个仓库
       - name: Checkout source repo (fantasy-bv)
@@ -50,10 +50,33 @@ jobs:
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
+      # 安装python3
+      - name: Install latest python (3.12+)
+        run: |
+          # 1. 更新系统包索引，安装依赖（添加ppa必需）
+          sudo apt-get update -y
+          sudo apt-get install -y software-properties-common
+          # 2. 添加deadsnakes ppa（ubuntu官方维护的python版本源）
+          sudo add-apt-repository -y ppa:deadsnakes/ppa
+          # 3. 安装最新稳定版python（3.12，可替换为3.13等后续版本）
+          sudo apt-get install -y python3.12 python3.12-dev python3.12-distutils
+          # 4. 配置python3命令指向最新版本（设置优先级）
+          sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 100
+          # 5. 安装pip（确保最新python的pip可用）
+          curl -sS https://bootstrap.pypa.io/get-pip.py | python3.12
+          # 6. 验证python版本（输出应显示3.12+）
+          python3 --version
+          pip3 --version
+
+      - name: Install python dependencies
+        run: |
+          # 目前的脚本无第三方依赖，此步骤仅保留作环境校验
+          echo "python环境已就绪，无第三方依赖需安装"
+
       - name: Customize scripts
         run: |
-          chmod +x $GITHUB_WORKSPACE/android-ci-source/scripts/customize-bv-fantasy.sh
-          $GITHUB_WORKSPACE/android-ci-source/scripts/customize-bv-fantasy.sh
+          chmod +x $GITHUB_WORKSPACE/ci-source/scripts/customize-bv-fantasy.sh
+          $GITHUB_WORKSPACE/ci-source/scripts/customize-bv-fantasy.sh
 
       # 从Monorepo精确合并每个库（核心改进）
       - name: Merge libraries from monorepo structure
@@ -196,37 +219,11 @@ jobs:
           
           mv ./app/build/outputs/apk/default/release/*.apk ./app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk
  
-      - name: Remove keystore
-        working-directory: ./fantasy-bv-source
-        run: |
-          rm -f "keystore.p12"
-          echo "Keystore removed successfully."
-
-      - name: Install 7zip
-        run: sudo apt-get update && sudo apt-get install -y p7zip-full
-
-      - name: Create aes256 encrypted archive with filename encryption
-        working-directory: ./fantasy-bv-source/app/build/outputs/apk/default/release
-        run: |
-          7z a \
-            -p"${{ secrets.ZIP_AES256_PWD }}" \
-            -mhe=on \
-            -t7z \
-            -m0=lzma2 \
-            -mx=5 \
-            -mfb=64 \
-            -md=32m \
-            -ms=on \
-            -mhc=on \
-            -ma=2 \
-            ./fantasybv-${{ env.BUILD_DATE }}.7z \
-            ./fantasybv-${{ env.BUILD_DATE }}.apk
-
-      - name: Create github release & upload apk
-        uses: softprops/action-gh-release@master
+      - name: Erase keystore, encrypt package and create release
+        uses: ./ci-source/.github/actions/erase-aes256pac-release/action.yml
         with:
-          tag_name: ${{env.BUILD_DATE}}-fantasybv
-          files: |
-            ./fantasy-bv-source/app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.7z
-          draft: false
-          prerelease: false
+          # 私钥文件路径（基于github.workspace的绝对路径）
+          P12_KEYSTORE_PATH: "./fantasy-bv-source/keystore.p12"
+          ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
+          BUILD_ARTIFACT_PATH: "./fantasy-bv-source/app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk"
+          RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-fantasybv"
