--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -53,18 +53,15 @@ jobs:
       # 安装python3
       - name: Install latest python (3.12+)
         run: |
-          # 1. 更新系统包索引，安装依赖（添加ppa必需）
+          # 1. 更新系统包索引
           sudo apt-get update -y
-          sudo apt-get install -y software-properties-common
-          # 2. 添加deadsnakes ppa（ubuntu官方维护的python版本源）
-          sudo add-apt-repository -y ppa:deadsnakes/ppa
-          # 3. 安装最新稳定版python（3.12，可替换为3.13等后续版本）
+          # 2. 安装系统自带python 3.12及依赖（含distutils）
           sudo apt-get install -y python3.12 python3.12-dev python3.12-distutils
-          # 4. 配置python3命令指向最新版本（设置优先级）
+          # 3. 配置python3命令指向最新版本（设置优先级）
           sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 100
-          # 5. 安装pip（确保最新python的pip可用）
+          # 4. 安装pip（确保最新python的pip可用）
           curl -sS https://bootstrap.pypa.io/get-pip.py | python3.12
-          # 6. 验证python版本（输出应显示3.12+）
+          # 5. 验证python版本（输出应显示3.12+）
           python3 --version
           pip3 --version
 
