--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -50,19 +50,16 @@ jobs:
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
-      # 安装python3
-      - name: Install latest python (3.12+)
+      # 安装python3（改用官方action，避免apt兼容性问题）
+      - name: Set up python 3.12
+        uses: actions/setup-python@main
+        with:
+          python-version: '3.12'
+          cache: 'pip' # 可选：缓存pip依赖，加速后续构建
+
+      # 验证版本（无需手动配置python3命令，action已自动处理）
+      - name: Verify python and pip versions
         run: |
-          # 1. 更新系统包索引
-          sudo apt-get update -y
-          # 2. 安装系统自带python 3.12及依赖（用通用distutils包替代版本化的distutils）
-          # 移除python3.12-distutils，改用python3-distutils（适配系统默认Python）
-          sudo apt-get install -y python3.12 python3.12-dev python3-distutils
-          # 3. 配置python3命令指向3.12版本（设置优先级）
-          sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 100
-          # 4. 安装pip（改用python内置ensurepip，避免get-pip.py的兼容性问题；同时升级pip）
-          python3.12 -m ensurepip --upgrade
-          # 5. 验证python与pip版本
           python3 --version
           pip3 --version
 
