--- a/.github/workflows/build-apk-zipxtract.yml
+++ b/.github/workflows/build-apk-zipxtract.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Initialize build environment
         id: init
         run: |
-          echo "BUILD_DATE=$(date -u +'%Y%m%d_%H%M%S')" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
           echo "RELEASE_TYPE=release" >> $GITHUB_ENV
           echo "BUILD_FLAVOR=ps" >> $GITHUB_ENV
           
