--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -242,35 +242,11 @@ jobs:
           echo "Files in /tmp directory:"
           ls -la /tmp/acode-*
 
-      - name: Remove keystore and build.json
-        run: |
-          rm -f "${{ env.STORE_FILE_PATH }}" "${{ env.BUILD_JSON_PATH }}"
-          echo "Keystore and build.json removed successfully."
-
-      - name: Install 7zip
-        run: sudo apt-get update && sudo apt-get install -y p7zip-full
-
-      - name: Create aes256 encrypted archive with filename encryption
-        run: |
-          7z a \
-            -p"${{ secrets.ZIP_AES256_PWD }}" \
-            -mhe=on \
-            -t7z \
-            -m0=lzma2 \
-            -mx=5 \
-            -mfb=64 \
-            -md=32m \
-            -ms=on \
-            -mhc=on \
-            -ma=2 \
-            /tmp/acode-${{ env.BUILD_DATE }}.7z \
-            /tmp/acode-${{ env.BUILD_DATE }}.apk
-
-      - name: Create github release & upload encrypted archive
-        uses: softprops/action-gh-release@master
+      - name: Erase keystore, encrypt package and create release
+        uses: ./ci-source/.github/actions/erase-aes256pac-release/
         with:
-          tag_name: ${{ env.BUILD_DATE }}-acode
-          files: |
-            /tmp/acode-${{ env.BUILD_DATE }}.7z
-          draft: false
-          prerelease: false
+          # 私密文件路径（基于github.workspace的绝对路径）
+          P12_KEYSTORE_PATH: "${{ env.STORE_FILE_PATH }}" "${{ env.BUILD_JSON_PATH }}"
+          ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
+          BUILD_ARTIFACT_PATH: "./tmp/acode-${{ env.BUILD_DATE }}.apk"
+          RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-acode"
