--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -22,6 +22,11 @@ jobs:
           repository: Xed-Editor/Xed-Editor
           ref: main
 
+      - name: Checkout ci source repo (self)
+        uses: actions/checkout@main
+        with:
+          path: ci-source
+
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
