--- a/.github/workflows/build-apk-materialfiles.yml
+++ b/.github/workflows/build-apk-materialfiles.yml
@@ -82,15 +82,15 @@ jobs:
           APK_PATH=$(find . -name "*.apk" -type f | grep -i release | head -1)
         fi
         echo "apk file details:"
-        ls -la "$APK_PATH"
-        mv "$APK_PATH" "./materialfiles-${{ env.BUILD_DATE }}.apk"
         ls -la *.apk
+        mv "$APK_PATH" "./materialfiles-${{ env.BUILD_DATE }}.apk"
+
 
     - name: Erase keystore, encrypt package and create release
       uses: ./ci-source/.github/actions/erase-aes256pac-release/
       with:
         # 文件路径（基于github.workspace的绝对路径）
-        P12_KEYSTORE_PATH: "./keystore.p12 ./signing.properties"
+        P12_KEYSTORE_PATH: "./materialfiles-source/keystore.p12 ./materialfiles-source/signing.properties"
         ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-        BUILD_ARTIFACT_PATH: "./materialfiles-${{ env.BUILD_DATE }}.apk"
+        BUILD_ARTIFACT_PATH: "./materialfiles-source/materialfiles-${{ env.BUILD_DATE }}.apk"
         RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-materialfiles"
