--- a/.github/workflows/android-build-ci-template.yml
+++ b/.github/workflows/android-build-ci-template.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          # 私钥文件路径（基于github.workspace的绝对路径）
+          # 文件路径为基于github.workspace的绝对路径
           P12_KEYSTORE_PATH: "./xxx/keystore.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./xxx/release/xxx-${{ env.BUILD_DATE }}.apk"
