--- a/.github/workflows/build-apk-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-apk-bggrgjqaubcoe-piliplus.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          # 私密文件路径（基于github.workspace的绝对路径）
+          # 文件路径为基于github.workspace的绝对路径
           P12_KEYSTORE_PATH: "./piliplus_source/android/app/key.p12 ./piliplus_source/android/key.properties"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./piliplus_source/build/app/outputs/flutter-apk/piliplus-${{ env.BUILD_DATE }}.apk"
