--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -216,8 +216,8 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          # 私钥文件路径（基于github.workspace的绝对路径）
-          P12_KEYSTORE_PATH: "./fantasy-bv-source/keystore.p12"
+          # 文件路径为基于github.workspace的绝对路径
+          P12_KEYSTORE_PATH: "./keystore.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "./fantasy-bv-source/app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk"
+          BUILD_ARTIFACT_PATH: "./app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-fantasybv"
