--- a/.github/workflows/build-apk-materialfiles.yml
+++ b/.github/workflows/build-apk-materialfiles.yml
@@ -90,7 +90,7 @@ jobs:
     - name: Erase keystore, encrypt package and create release
       uses: ./ci_source/.github/actions/erase_aes256pac_release/
       with:
-        # 文件路径（基于github.workspace的绝对路径）
+        # 文件路径为基于github.workspace的绝对路径
         P12_KEYSTORE_PATH: "./materialfiles_source/keystore.p12 ./materialfiles_source/signing.properties"
         ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
         BUILD_ARTIFACT_PATH: "./materialfiles_source/materialfiles-${{ env.BUILD_DATE }}.apk"
