--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           repository: Xed-Editor/Xed-Editor
           ref: main
+          path: xed_editor_source
+          fetch-depth: 0
 
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
@@ -37,49 +39,35 @@ jobs:
           java-version: "21"
           distribution: "temurin"
           cache: gradle
-          
-      # - name: Cache gradle build files
-      #   uses: actions/cache@main
-      #   with:
-      #     path: |
-      #       ~/.gradle/caches
-      #       ~/.gradle/wrapper
-      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/libs.versions.toml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-gradle-
 
       - name: Decode and create secrets
+        working-directory: ./xed_editor_source
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > /tmp/xed.keystore
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" > /tmp/signing.properties
-          echo "keyPassword=${{ secrets.KEY_ALIAS_PASSWORD }}" >> /tmp/signing.properties
-          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> /tmp/signing.properties
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./tmp/xed.keystore
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" > ./tmp/signing.properties
+          echo "keyPassword=${{ secrets.KEY_ALIAS_PASSWORD }}" >> ./tmp/signing.properties
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> ./tmp/signing.properties
 
       - name: Clone submodules
+        working-directory: ./xed_editor_source
         run: git submodule update --init --recursive
 
-      - name: Set commit hash
-        id: commit_hash
-        run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
       - name: Build release apk files
+        working-directory: ./xed_editor_source
         run: |
+          chmod +x ./gradlew
           ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
-          mkdir -p release-apks
-          # mv app/build/outputs/apk/release/*.apk release-apks/xed-editor-${{ env.COMMIT_HASH }}-arm64-v8a.apk
-          mv app/build/outputs/apk/release/*.apk release-apks/xed-editor-${{env.BUILD_DATE}}.apk
+          mkdir -p ./release-apks
+          mv ./app/build/outputs/apk/release/*.apk ./release-apks/xed-editor-${{env.BUILD_DATE}}.apk
         env:
-          KEYSTORE_FILE: /tmp/xed.keystore
-          SIGNING_PROPERTIES_FILE: /tmp/signing.properties
+          KEYSTORE_FILE: ./tmp/xed.keystore
+          SIGNING_PROPERTIES_FILE: ./tmp/signing.properties
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          # 私钥文件路径（基于github.workspace的绝对路径）
-          P12_KEYSTORE_PATH: "./tmp/xed.keystore"
+          # 文件路径为基于github.workspace的绝对路径
+          P12_KEYSTORE_PATH: "./xed_editor_source/tmp/xed.keystore ./xed_editor_source/tmp/signing.properties"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "./release-apks/xed-editor-${{env.BUILD_DATE}}.apk"
+          BUILD_ARTIFACT_PATH: "./xed_editor_source/release-apks/xed-editor-${{env.BUILD_DATE}}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-xed-editor"
