--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Decode and create secrets
         working-directory: ./xed_editor_source
         run: |
+          mkdir -p ./tmp
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./tmp/xed.keystore
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" > ./tmp/signing.properties
           echo "keyPassword=${{ secrets.KEY_ALIAS_PASSWORD }}" >> ./tmp/signing.properties
