--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -55,14 +55,14 @@ jobs:
 
       - name: Build release apk files
         working-directory: ./xed_editor_source
+        env:
+          KEYSTORE_FILE: ./xed_editor_source/tmp/xed.keystore
+          SIGNING_PROPERTIES_FILE: ./xed_editor_source/tmp/signing.properties
         run: |
           chmod +x ./gradlew
           ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
           mkdir -p ./release-apks
           mv ./app/build/outputs/apk/release/*.apk ./release-apks/xed-editor-${{env.BUILD_DATE}}.apk
-        env:
-          KEYSTORE_FILE: ./tmp/xed.keystore
-          SIGNING_PROPERTIES_FILE: ./tmp/signing.properties
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
