--- a/.github/workflows/build-apk-wgtunnel.yml
+++ b/.github/workflows/build-apk-wgtunnel.yml
@@ -46,8 +46,26 @@ jobs:
           java-version: '17'
           cache: 'gradle'
 
-      - name: Set up android sdk
-        uses: zxgv5/setup-android@main
+      # 替代android-actions/setup-android@main
+      - name: Set up android sdk components
+        shell: bash
+        run: |
+          # 设置 Android SDK 环境变量（如果已安装）
+          if [ -d "$HOME/Android/sdk" ]; then
+            echo "ANDROID_HOME=$HOME/Android/sdk" >> $GITHUB_ENV
+            echo "ANDROID_SDK_ROOT=$HOME/Android/sdk" >> $GITHUB_ENV
+          elif [ -d "/usr/local/lib/android/sdk" ]; then
+            echo "ANDROID_HOME=/usr/local/lib/android/sdk" >> $GITHUB_ENV
+            echo "ANDROID_SDK_ROOT=/usr/local/lib/android/sdk" >> $GITHUB_ENV
+          fi
+          # 如果环境中有 sdkmanager，安装必要组件
+          if command -v sdkmanager &> /dev/null; then
+            yes | sdkmanager --licenses || true
+            sdkmanager --install "platform-tools" "platforms;android-36" "build-tools;36.0.0" "ndk-bundle"
+          fi
+
+      # - name: Set up android sdk
+      #   uses: zxgv5/setup-android@main
 
       - name: Enable gradle build cache
         working-directory: ./wgtunnel_source
